# AirDriver

./: .gitignore  Makefile  README.md  install.sh  pyproject.toml  requirements.txt  run.sh
airdriver/: __init__.py  __main__.py  cli.py  version.py
airdriver/core/: __init__.py  chipset_db.py  detector.py  diagnose.py  installer.py  modules.py  monitor.py  report.py  system.py  verify.py
airdriver/data/: chipsets.json
airdriver/data/drivers/: README.md
airdriver/gui/: __init__.py  app.py  main_window.py  theme.py
scripts/: fetch_offline_drivers.sh
