[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airdriver"
version = "0.2.0"
description = "WiFi adapter driver auto-installer for Kali Linux & Parrot OS (with GUI)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "at0m-b0mb" }]
keywords = ["wifi", "driver", "kali", "parrot", "pentest", "monitor-mode", "dkms", "realtek", "atheros", "mediatek"]
classifiers = [
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
# Core + CLI are stdlib-only; the GUI extra pulls in Qt.
dependencies = []

[project.optional-dependencies]
gui = ["PySide6>=6.5"]

[project.scripts]
airdriver = "airdriver.cli:main"

[project.gui-scripts]
airdriver-gui = "airdriver.gui.app:run"

[tool.setuptools]
packages = ["airdriver", "airdriver.core", "airdriver.gui"]

[tool.setuptools.package-data]
airdriver = ["data/*.json"]
